Fixing vertical alignment.

--- a/public/books.css
+++ b/public/books.css
@@ -46,12 +46,7 @@
   overflow:hidden;
   border: 1px solid #ccc;
   flex: 1;
-  padding: 1em;
-}
-
-.list {
-  justify-items: center;
-  align-items: center;
+  padding: 0.5em 0.5em 0.5em 0.5em;
 }
 
 .grid-container {
@@ -59,6 +54,10 @@
   padding: 10px;
   align-items: center;
   justify-items: center;
+}
+
+.aboutList {
+  margin-bottom: 0px;
 }
 
 @media screen and (max-width: 400px) {
